# RLAIF-V

./: .gitignore  README.md  README_zh.md  chat.py  pyproject.toml
RefoMB/: eval_RefoMB_dev.py
builder/: builder.py  language_model_builder.py  llava_builder.py  minicpm_v_2_6.py  omnillm_builder.py
data_engine/: README.md  README_zh.md  answer_sampler.py  data_engine.py  data_pair_builder.py  dataset.py  engine.py  logps_calculator.py  logps_gen.sh  reward_computer.py  run_engine.sh  util.py
data_engine/dpo_data_filter/: filter.py  length_filter.py  num_filter.py  same_filter.py  similar_filter.py
data_engine/pipeline/: pipeline.py
eval/: change_mmhal_predict_template.py  eval_RefoMB_p0.py  eval_gpt_mmhal.py  eval_gpt_obj_halbench.py  eval_hallucination.py  gpt4.py  gpt4_grpc.py  json_to_excel.py  merge_mmhal_review_with_predict.py  summarize_gpt_mmhal_review.py  summarize_gpt_obj_halbench_review.py
eval/data/: RefoMB_dev.jsonl  (+3 more)
examples/: detail_test_30_input.jsonl
llava/: __init__.py  conversation.py  llava15_sample_data.py  mm_utils.py
minicpm-llama3-v-25/: minicpmv_autocheck.py  minicpmv_diverse_gen.py
minicpm_v_26/: logps.py  minicpmv_sample_data.py
muffin/: __init__.py  constants.py  conversation.py  gen_data_util.py  llava15_gen_data.py  llava_critic_gen_data.py  sample_data_util.py  utils.py
omnilmm/: constants.py  conversation.py  omnilmm_gen_data.py  omnilmm_sample_data.py  utils.py
utils/: diff_lib.py  file_io.py  get_pairs_filter_shorten.py  get_preference_pairs.py  llama3_8b_inference.py  pair_construction.py  utils.py
(+60 files in other folders)
